--- a/src/sass/rural/_main.scss
+++ b/src/sass/rural/_main.scss
@@ -33,7 +33,7 @@
  *         +---wt-page-content
  */
 
-#content {
+main {
     .wt-main-container {
         @extend .table-responsive;
         @include maj-base-layout-col;
